--- a/new/css/style.css
+++ b/new/css/style.css
@@ -8,10 +8,9 @@ ul {list-style: none;}
 .sticky {position: fixed; top:0; padding-top: 8px; transition: top 0.2s ease-in-out;} 
 
 
-
+/* loading */
 #loading {width: 100vw; height: 100vh; top: 0; left: 0; right: 0; bottom: 0; display: flex; justify-content: center; align-items: center; z-index: 9999; position: fixed;}
 #loading img {width: 100px; height: 100px; -webkit-animation: spin 2s linear infinite; animation: spin 2s linear infinite;}
-#app {margin: 0 auto; width: 100vw; height: 100vh; width: 320px; background-color: rgba(0, 0, 0, 0.01);}
 @-webkit-keyframes spin {
     0% { -webkit-transform: rotate(0deg); }
     100% { -webkit-transform: rotate(360deg); }
@@ -21,6 +20,11 @@ ul {list-style: none;}
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+/* app */
+#app {margin: 0 auto; width: 100vw; height: 100vh; width: 320px; background-color: rgba(0, 0, 0, 0.01);}
+
+/* page - index */
 header {width: 320px; background-color: white; position: relative;}
 header .avatar img {width: 40px; height: 40px; min-width: 30px; min-height: 30px; max-width: 40px; max-height: 40px;}
 header .shop {font-weight: 700; padding-left: 14px; font-size: 14px; padding-top: 44px; display: flex; justify-content: flex-start; align-items: center; position: sticky;}
@@ -64,14 +68,6 @@ footer nav ul li img {width: 25px; height: 25px;}
 #filter .filter_head .title {font-weight: 900;}
 #filter .filter_head .close img {width: 20px; height: 20px;}
 
-#filter .date_option .selector {display: flex; justify-content: space-around; align-items: center; }
-#filter .date_option .selector .date{display: flex; justify-content: space-between; align-items: center; padding: 4px 8px;}
-#filter .date_option .selector .date label {font-weight: 700;}
-#filter .date_option .selector .date input {border: 1px solid #eeeeee;}
-#filter .date_option .shortcuts {margin-top: 4px;}
-#filter .date_option .shortcuts table {width: 100%; line-height: 24px; padding: 6px;}
-#filter .date_option .shortcuts table td{width: 33.3%; height: 35px; text-align: center; border: 1px solid lightgrey; font-size: 10px; font-size: 900; border-radius: 5px;}
-
 #filter .state_option ul li .container {background-color: white; color: black; padding: 16px; display: flex; justify-content: space-between; position: relative;}
 #filter .state_option ul li .container .statename {font-weight: 900;}
 #filter .state_option ul li .container input {position: absolute; opacity: 0; cursor: pointer; height: 0; width: 0;}
@@ -80,4 +76,9 @@ footer nav ul li img {width: 25px; height: 25px;}
 #filter .state_option ul li .container input:checked ~ .checkmark {background-color: #aaaaaa;}
 #filter .state_option ul li .container input:checked ~ .statename {color: tomato;}
 
-#filter .confirm {position: absolute; right: 16px; bottom: 16px; text-align: center; padding: 4px 12px; }
+/* page - order */
+
+#header2 {width: 320px; position: relative;}
+#header2 .title {width: 320px; height: 44px; background-color: white; position: fixed; top: 0; left: 0; display: flex; justify-content: flex-start; align-items: center;}
+#header2 .title .icons img {width: 20px; height: 20px; padding-left: 8px; display: block;}
+#header2 .title .titlename {margin-left: 8px; font-weight: 900;}
