--- a/css/style.css
+++ b/css/style.css
@@ -26,4 +26,4 @@ footer nav ul li {font-size: 18px;}
 footer nav ul li img {width: 25px; height: 25px;}
 
 /* app */
-#app {margin: 0 auto; width: 100vw; height: 100vh; width: 320px; background-color: rgba(0, 0, 0, 0.01);}
+#app {margin: 0 auto; width: 100vw; width: 320px; background-color: rgba(0, 0, 0, 0.01);}
